# CryptoDiscordBot

./: bot.py  pyproject.toml
cogs/: data.py  graph.py
