[tool.poetry]
name = "repl_python3_CryptoDiscordBot"
version = "0.1.0"
description = ""
authors = ["jonasraum <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
money = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
